<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">-->


    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/product_description"/>

        <Spinner
            android:id="@+id/item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <EditText
            android:hint="@string/item_name"
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <EditText
            android:hint="@string/item_description"
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
        <EditText
            android:hint="@string/item_price"
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <EditText
            android:id="@+id/product_quatity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="text" />
        <Button
            android:id="@+id/add_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_image"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
    </ScrollView>

<!--</LinearLayout>-->