<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baraka62.checkit.SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="130dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Last_name" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        android:inputType="text" />-->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />
    <Button
        android:id="@+id/sign_me_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupbtn"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginbtn"/>
    </LinearLayout>

</ScrollView>
