<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="130dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        tools:context="com.example.baraka62.checkit.Login">


       <!-- <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:contentDescription="@string/app_icon"
            android:src="@mipmap/ic_launcher" />-->

        <EditText
            android:id="@+id/my_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:inputType="text"
            android:padding="10dp"
             />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/loginbtn"
             />
        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/got_to_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupbtn"
             />

    </LinearLayout>
</ScrollView>