<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/material_blue_300">
            <ImageView
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/user_profile"
                android:id="@+id/my_profile" />

            <TextView
                android:id="@+id/my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="barakavictor62"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <Button
                android:id="@+id/store_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/store_2"
                android:layout_alignBottom="@+id/store_2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:text="@string/store_1"
                android:onClick="loadStore"/>


            <Button
                android:id="@+id/store_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/store_3"
                android:layout_alignBottom="@+id/store_3"
                android:layout_centerHorizontal="true"
                android:text="@string/store_2"
                android:onClick="loadStore"/>

            <Button
                android:id="@+id/store_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/result"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/store_3"
                android:onClick="loadStore"/>



            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>